--- a/mijncv.html
+++ b/mijncv.html
@@ -25,8 +25,8 @@
             <caption>Opleiding en Werkervaring</caption>
             <thead>
                 <tr>
-                    <th>Type</th>
-                    <th>Titel/Omschrijving</th>
+                    <th>Ervaring</th>
+                    <th>Beroepspositie/Studieachtergrond</th>
                     <th>Periode</th>
                 </tr>
             </thead>
