--- a/mijncv.html
+++ b/mijncv.html
@@ -26,7 +26,7 @@
             <thead>
                 <tr>
                     <th>Ervaring</th>
-                    <th>Beroepspositie/Studieachtergrond</th>
+                    <th>Positie/Opleiding</th>
                     <th>Periode</th>
                 </tr>
             </thead>
