--- a/mijncv.html
+++ b/mijncv.html
@@ -26,7 +26,7 @@
             <thead>
                 <tr>
                     <th>Ervaring</th>
-                    <th>Werkervaring-Studieachtergrond</th>
+                    <th>Werkervaring / Studieachtergrond</th>
                     <th>Periode</th>
                 </tr>
             </thead>
